# yogasharp

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.txt  YogaSharp.sln
.github/workflows/: release.yml
TestApp/: Program.cs  TestApp.csproj
YogaSharp/: Enums.cs  ILayoutEngine.cs  ILayoutNode.cs  NativeLoader.cs  Structs.cs  YogaLayoutEngine.cs  YogaLayoutNode.cs  YogaNative.cs  YogaSharp.csproj
YogaSharp.Core/: YogaSharp.Core.csproj
YogaSharp.Core/Core/: Enums.cs  YogaConfig.cs  YogaMeasureResult.cs  YogaValue.cs
YogaSharp.Core/Handles/: YogaConfigHandle.cs  YogaNodeHandle.cs
YogaSharp.Core/Internal/: YogaNative.cs
YogaSharp.Core/Interop/: NativeLoader.cs
YogaSharp.Layout/: YogaLayout.cs  YogaNode.cs  YogaSharp.Layout.csproj
YogaSharp.Native/: CMakeLists.txt  build.sh  build_windows.bat
